fixed image sizing changing when another tab is selected

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 					</ul>
 					<div id="tab_content">
-						<img src="./static/images/F1DB_team.png" alt="F1 team page">
+						<img src="./static/images/F1DB_team.png" alt="F1 team page" style="width: 100%">
 						<p>Uses the Ergast and Google Maps APIs, LAMP stack, and Materialize.<button data-toggle='modal' data-target='#F1Modal' class='btn btn-default'>More about F1 Databucket</button></p>
 					</div>
 				</div>
