added resume and link

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 				<p>Music also taught me about dedication. Spending 4-6 hours per day alone in a practice room was necessary to master control of the piano, and it is no different with coding.</p>
 				<p>I bring a number of unique skills and experiences to the table. It is always difficult to find that first position in a new career, but I am confident that I have what it takes to flourish. Please do not hesitate to contact me if you think that I would fit within your team!</p>
 				<p>Sorensenapaul@gmail.com</p>
+				<button class="btn btn-default"><a href="./static/Resume.pdf">Resume</a></button>
 			</div>
 			<!-- <div class="content">
 			<h2>Algorithm Visualizations</h2>
