Updated projects and summary

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
 <div class="nav">
 	<h1 id="name">Andrew Sorensen</h1>
-	<h3 id="title">Front-End Developer / Coder</h3>
+	<h3 id="title">Software Engineer</h3>
 </div>
 <div class="container-fluid">
 	<div class="row">
@@ -93,10 +93,8 @@
 				<div class="inner_content">
 					<ul id="tabs">
 						<li data-target="F1DB"><p class="tab_link" >F1-DataBucket</p></li>
-						<li data-target="VoiceChat"><p class="tab_link">VoiceChat</p></li>
-						<li data-target="Winslow"><p class="tab_link">Winslow</p></li>							
+						<li data-target="VoiceChat"><p class="tab_link">VoiceChat</p></li>						
 						<li data-target="EvitOrg"><p class="tab_link">EvitOrg</p></li>
-						<li data-target="Magrathea"><p class="tab_link">Magrathea</p></li>
 						<li data-target="MCCalc"><p class="tab_link">Minecraft Calculator</p></li>
 
 					</ul>
@@ -108,16 +106,9 @@
 			</div>
 			<h3 class="content_label">Background...</h3>
 			<div class="content text_content">
-				<p class="inner_content">A recent graduate of Coding Dojo, I am a very thorough Web Developer with a real passion for technology and improving the user experience. I have a BA in Music from Central Washington University and I am always using my artistic side to complement the logicality of coding.</p>
-				<p class="inner_content">Prior to Coding Dojo, I held a couple of positions in Sales. The first was a position selling Audis for what has now become Audi Bellevue. This was the result of a promotion up from being a Lot Porter because I wanted to learn some skills that I knew would be very valuable throghout the rest of my career:</p>
-				<ul>
-					<li>Relationship building</li>
-					<li>Customer experience management</li>
-					<li>Working under pressure</li>
-					<li>Salesmanship</li>
-				</ul>
-				<p class="inner_content">After I felt I had learned those skills, I desired more. However, I also needed a change of pace from selling cars. I took a position as a Leasing Consultant with Essex Property Trust, and remained there until the opportunity at Coding Dojo came up and I decided that I needed to follow my passion.</p>
-				<p class="inner_content">At Coding Dojo, my entire cohort and I learned a tremendous amount and gained over 1000hrs of experience in just 3 months! It taught us how to work under a deadline with our timed full-stack exams, to code cleanly, be resourceful and learn on our own. I graduated with a double black belt, meaning that I built a complete web app in LAMP, MEAN, and Rails stacks. Each in under 4.5 hours!</p>
+				<p class="inner_content">I am a very thorough Web Developer with a real passion for technology and improving the user experience. I have a BA in Music from Central Washington University and I am always using my artistic side to complement the logicality of coding.</p>
+				<p class="inner_content">After a relatively short stint in sales for a couple of companies, I decided that the career I really wanted was in software development. I took a risk and quit my job and went over $10k in debt to attend Coding Dojo in Bellevue. Armed with the skills required to pursue one of my passions, I secured a job with Expedia, Inc. as an Associate Software Engineer, where I am currently.</p>
+
 				<p class="inner_content">Check out some of my projects above! I will do whatever it takes to be designing the most popular websites out there in the future, will your website be one of those?</p>
 			</div>
 			<h3 class="content_label">Why am I unique?</h3>
@@ -129,9 +120,10 @@
 					<li>It must also be playable - it must provide an intuitive user interface with a rewarding experience for the user.</li>
 				</ul>
 				<p>Music also taught me about dedication. Spending 4-6 hours per day alone in a practice room was necessary to master control of the piano, and it is no different with coding.</p>
-				<p>I bring a number of unique skills and experiences to the table. It is always difficult to find that first position in a new career, but I am confident that I have what it takes to flourish. Please do not hesitate to contact me if you think that I would fit within your team!</p>
-				<p>Sorensenapaul@gmail.com</p>
-				<button class="btn btn-default"><a href="./static/Resume.pdf">Resume</a></button>
+				<p>Through my current experience with Expedia I have learned and become accustomed to what it takes to be a successful Software Engineer in an Agile environment. The number one thing that I strive for is to learn something new every day. Whether it's a small CSS trick or learning to use JavaScript Promises, every day brings more knowledge.</p>
+				<p>If you're interested, go ahead and email me so we can talk about about how I may fit into your team!</p>
+				<p>- Sorensenapaul@gmail.com</p>
+				<!-- <button class="btn btn-default"><a href="./static/Resume.pdf">Resume</a></button> -->
 			</div>
 			<!-- <div class="content">
 			<h2>Algorithm Visualizations</h2>
@@ -227,50 +219,6 @@
     </div>
   </div>
 </div>
-<!-- Winslow -->
-<div class="modal fade" id="WinslowModal" tabindex="-1" role="dialog" aria-labelledby="WinslowLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="WinslowLabel">Winslow</h4>
-      </div>
-      <div class="modal-body">
-        <img src="./static/images/winslow_main.png" alt="Winslow main desktop page">
-		<p>Winslow is a website I created for a Kirkland, WA salon called "Winslow Salon". I worked with the owner to develop a mobile-first website from existing styling and images.</p>
-		<img src="./static/images/winslow_mobile.png" alt="EvitOrg tables page" style="width:20%;display:block;margin:0 auto;">
-		<p>This is a front-end only website, most of the time was spent ensuring that everything looked great on mobile and desktop.</p>  
-      </div>
-      <div class="modal-footer">
-	    <a href="https://www.github.com/conedeathaps/winslow"><i class="fa fa-github fa-4x"></i></a>
-        <a href="www.winslowsalon.com" class="btn btn-default btn-lg">Check it out!</a>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Magrathea -->
-<div class="modal fade" id="MagModal" tabindex="-1" role="dialog" aria-labelledby="MagLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="MagLabel">Magrathea</h4>
-      </div>
-      <div class="modal-body">
-        <img src="./static/images/magrathea_main.png" alt="Magrathea main page">
-        <p>Magrathea was a super fun eCommerce project that I worked on with a couple of other colleagues. We learned the harsh lessons of Git, and how difficult collaboration can be at first. This app uses Materialize for its styling. Erika worked on the planet page which shows similar planets, Brandon worked on the cart and admin areas, and I worked on the main page with its search and categorization.</p>
-        <img src="./static/images/magrathea_planet.png" alt="Magrathea planet page">
-        <p>This app was built in LAMP stack, using CodeIgniter for its MVC framework. We built the entire app in a week's time, and only spent a couple of hours on it recently to clear up some bugs.</p>
-        <img src="./static/images/magrathea_cart.png" alt="Magrathea cart page">
-		<p>Images behave oddly on Heroku. As a result, some of the images are missing or skewed.</p>
-      </div>
-      <div class="modal-footer">
-	    <a href="https://www.github.com/conedeathaps/Magrathea"><i class="fa fa-github fa-4x"></i></a>
-        <a href="http://magrathea-app.herokuapp.com" class="btn btn-default btn-lg">Try it out!</a>
-      </div>
-    </div>
-  </div>
-</div>
 <!-- Minecraft Calculator -->
 <div class="modal fade" id="MCModal" tabindex="-1" role="dialog" aria-labelledby="MCLabel">
   <div class="modal-dialog" role="document">
@@ -296,7 +244,7 @@
 
 <!--END MODALS-->
 <div class="footer">
-	<h4>ConeDeathAPS - Updated 2/15/2016 at 4:44pm PST</h4>
+	<h4>ConeDeathAPS - Updated 7/17/2016 at 8:44pm PDT</h4>
 </div>
 
 </body>
